[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://Scripts/Hunter.gd" id="1"]
[ext_resource type="Texture2D" path="res://icon.svg" id="2"]
[ext_resource type="Script" path="res://Scripts/VisionCone.gd" id="3"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [ExtResource("2")],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [ExtResource("2")],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="2"]
radius = 12.0

[sub_resource type="CircleShape2D" id="3"]
radius = 22.0

[node name="Hunter" type="CharacterBody2D"]
script = ExtResource("1")

[node name="Visuals" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Visuals"]
sprite_frames = SubResource("1")
animation = &"idle"
scale = Vector2(1.6, 1.6)
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("2")

[node name="VisionCone" type="Node2D" parent="."]
script = ExtResource("3")
cone_angle_degrees = 120.0
cone_length = 520.0
auto_length_from_viewport = false
show_cone = false
require_line_of_sight = true
occlusion_mask = 1

[node name="DoorSensor" type="Area2D" parent="."]
monitoring = true
monitorable = true
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorSensor"]
shape = SubResource("3")

[node name="PresenceLoop" type="AudioStreamPlayer2D" parent="."]
volume_db = -24.0
